@@ -4060,6 +4060,7 @@ GEN     bnrL1(GEN bnr, GEN sbgrp, long flag, long prec);
 GEN     bnrrootnumber(GEN bnr, GEN chi, long flag, long prec);
 GEN     bnrstark(GEN bnr, GEN subgroup, long prec);
 GEN     cyc2elts(GEN cyc);
+GEN     qfbforms(GEN D);
 
 /* sumiter.c */
 
